@@ -53,6 +53,7 @@ export(incoming_view)
 export(influenzaVax_obs)
 export(initialize_emr_tables)
 export(interval)
+export(list_allergy)
 export(list_appointments)
 export(list_contact_15plus)
 export(list_contact_45_74)
@@ -67,6 +68,7 @@ export(list_contact_diabetes)
 export(list_contact_services)
 export(list_contact_visits)
 export(list_cst)
+export(list_dataQuality)
 export(list_fobt)
 export(list_influenza)
 export(list_mammogram)
@@ -86,6 +88,7 @@ export(open_configuration_db)
 export(open_emr_db)
 export(password.reset)
 export(password.set)
+export(paste2)
 export(pregnant_list)
 export(read_configuration_db)
 export(restrictionTypes_list)
